--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                                 <a  class="xe-user-name overflowClip_1">
                                     <strong>Pexels</strong>
                                 </a>
-                                <p class="overflowClip_2">图片｜视频 CC0 授权素材，可商用</p>
+                                <p class="overflowClip_2">图片、视频 CC0 授权素材，可商用</p>
                             </div>
                         </div>
                     </div>
@@ -316,7 +316,7 @@
                                 <a  class="xe-user-name overflowClip_1">
                                     <strong>Startup Stock Photos</strong>
                                 </a>
-                                <p class="overflowClip_2">新创、办公室和科技题材的免费图库，採用 CC0 授权方式释出，没有使用限制，使用时也无需标示来源出处</p>
+                                <p class="overflowClip_2">新创、办公室和科技题材的免费图库，可商业</p>
                             </div>
                         </div>
                     </div>
@@ -331,7 +331,7 @@
                                 <a  class="xe-user-name overflowClip_1">
                                     <strong>pixabay</strong>
                                 </a>
-                                <p class="overflowClip_2">超过三十万张免费相片、向量图与艺术插图素材图库，可商业</p>
+                                <p class="overflowClip_2">相片、视频、向量图与艺术插图素材图库，可商业</p>
                             </div>
                         </div>
                     </div>
@@ -363,7 +363,7 @@
                                 <a  class="xe-user-name overflowClip_1">
                                     <strong>Everypixel</strong>
                                 </a>
-                                <p class="overflowClip_2">整合 50 个顶尖免费图库搜寻引擎，使用演算法过滤不适合图片还能比价</p>
+                                <p class="overflowClip_2">50 个图库搜寻引擎，使用演算法过滤不适合图片还能比价</p>
                             </div>
                         </div>
                     </div>
