--- a/index.html
+++ b/index.html
@@ -369,6 +369,21 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://librestock.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://librestock.com/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="https://cdn.jsdelivr.net/gh/rockbenben/WebStack/assets/images/logos/librestock.png" class="lozad img-circle" width="40">
+                            </a>
+                            <div class="xe-comment">
+                                <a  class="xe-user-name overflowClip_1">
+                                    <strong>librestock</strong>
+                                </a>
+                                <p class="overflowClip_2">从 20 个常用图库搜寻数万张高画质 CC0 授权免费相片素材</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://visualhunt.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://visualhunt.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
@@ -379,21 +394,6 @@
                                     <strong>visualhunt</strong>
                                 </a>
                                 <p class="overflowClip_2">100% Free High Quality Photos</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://librestock.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://librestock.com/">
-                        <div class="xe-comment-entry">
-                            <a class="xe-user-img">
-                                <img data-src="https://cdn.jsdelivr.net/gh/rockbenben/WebStack/assets/images/logos/librestock.png" class="lozad img-circle" width="40">
-                            </a>
-                            <div class="xe-comment">
-                                <a  class="xe-user-name overflowClip_1">
-                                    <strong>librestock</strong>
-                                </a>
-                                <p class="overflowClip_2">65,084 high quality do-what-ever-you-want stock photos</p>
                             </div>
                         </div>
                     </div>
@@ -410,7 +410,7 @@
                                 <a  class="xe-user-name overflowClip_1">
                                     <strong>SplitShire</strong>
                                 </a>
-                                <p class="overflowClip_2">Free Stock Photos and Videos for commercial use.</p>
+                                <p class="overflowClip_2">高品质免费图库，可商用，不可上传至其他图库</p>
                             </div>
                         </div>
                     </div>
@@ -425,7 +425,7 @@
                                 <a  class="xe-user-name overflowClip_1">
                                     <strong>StockSnap</strong>
                                 </a>
-                                <p class="overflowClip_2">Beautiful free stock photos</p>
+                                <p class="overflowClip_2">高清晰摄影师图片，可商用</p>
                             </div>
                         </div>
                     </div>
@@ -440,7 +440,7 @@
                                 <a  class="xe-user-name overflowClip_1">
                                     <strong>albumarium</strong>
                                 </a>
-                                <p class="overflowClip_2">The best place to find & share beautiful images</p>
+                                <p class="overflowClip_2">分类筛选图片，大多可商用</p>
                             </div>
                         </div>
                     </div>
