--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                                 <a  class="xe-user-name overflowClip_1">
                                     <strong>visualhunt</strong>
                                 </a>
-                                <p class="overflowClip_2">100% Free High Quality Photos</p>
+                                <p class="overflowClip_2">色彩分类高清图库，可商用</p>
                             </div>
                         </div>
                     </div>
@@ -455,7 +455,7 @@
                                 <a  class="xe-user-name overflowClip_1">
                                     <strong>myphotopack</strong>
                                 </a>
-                                <p class="overflowClip_2">A free photo pack just for you. Every month.</p>
+                                <p class="overflowClip_2">时间划分，每月 10 张免费图片</p>
                             </div>
                         </div>
                     </div>
